--- a/index.html
+++ b/index.html
@@ -11,32 +11,30 @@
 <body>
     <h1>Mememory Game </h1>
     <section class="menu">
-    <button id="start">Start</button>
+    <button id="pause">Pause</button>
     <p>Moves</p>
     <P id="moves"></P>
     <p>Time</p>
     <p id="timer"></p>
-    <button id="reset">Reset</button>
+    <button id="retart"onclick="restartGame()">Restart</button>
     </section>
     <section class="cards">
-        <a href=""><i id="1a" class="fas fa-candy-cane"></i></a>
-        <a href=""><i id ="1b" class= "fas fa-candy-cane"></i></a>
-        <a href=""><i id ="2a" class= ""></i></a>
-        <a href=""><i id ="2b" class= ""></i></a>
-        <a href=""><i id ="3a" class= ""></i></a>
-        <a href=""><i id ="3b" class= ""></i></a>
-        <a href=""><i id ="4a" class= ""></i></a>
-        <a href=""><i id ="4b" class= ""></i></a>
-        <a href=""><i id ="5a" class= ""></i></a>
-        <a href=""><i id ="5b" class= ""></i></a>
-        <a href=""><i id ="6a" class= ""></i></a>
-        <a href=""><i id ="6b" class= ""></i></a>
-        <a href=""><i id ="7a" class= ""></i></a>
-        <a href=""><i id ="7b" class= ""></i></a>
-        <a href=""><i id ="8a" class= ""></i></a>
-        <a href=""><i id ="8b" class= ""></i></a>
-
-
-    </section>
+        <div class ="card" id="1a" type="1">1</div>
+        <div class ="card" id="1b" type="1">1</div>
+        <div class ="card" id="2a">2</div>
+        <div class ="card" id="2b">2</div>
+        <div class ="card" id="3a"></div>
+        <div class ="card" id="3b"></div>
+        <div class ="card" id="4a"></div>
+        <div class ="card" id="4b"></div>
+        <div class ="card" id="5a"></div>
+        <div class ="card" id="5b"></div>
+        <div class ="card" id="6a"></div>
+        <div class ="card" id="6b"></div>
+        <div class ="card" id="7a"></div>
+        <div class ="card" id="7b"></div>
+        <div class ="card" id="8a"></div>
+        <div class ="card" id="8b"></div>
+  </section>
 </body>
 </html>
