--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
     <button id="retart"onclick="restartGame()">Restart</button>
     </section>
     <section class="cards">
-        <div class ="card" id="1a" type="1">1</div>
-        <div class ="card" id="1b" type="1">1</div>
-        <div class ="card" id="2a">2</div>
-        <div class ="card" id="2b">2</div>
-        <div class ="card" id="3a"></div>
-        <div class ="card" id="3b"></div>
-        <div class ="card" id="4a"></div>
-        <div class ="card" id="4b"></div>
-        <div class ="card" id="5a"></div>
-        <div class ="card" id="5b"></div>
-        <div class ="card" id="6a"></div>
-        <div class ="card" id="6b"></div>
-        <div class ="card" id="7a"></div>
-        <div class ="card" id="7b"></div>
-        <div class ="card" id="8a"></div>
-        <div class ="card" id="8b"></div>
+        <img src="" alt="card1" class ="card" id="1a"></img>
+        <img src="" alt="card1" class ="card" id="1b"></img>
+        <img src="" alt="card2" class ="card" id="2a"></img>
+        <img src="" alt="card2" class ="card" id="2b"></img>
+        <img src="" alt="card3" class ="card" id="3a"></img>
+        <img src="" alt="card3" class ="card" id="3b"></img>
+        <img src="" alt="card4" class ="card" id="4a"></img>
+        <img src="" alt="card4" class ="card" id="4b"></img>
+        <img src="" alt="card5" class ="card" id="5a"></img>
+        <img src="" alt="card5" class ="card" id="5b"></img>
+        <img src="" alt="card6" class ="card" id="6a"></img>
+        <img src="" alt="card6" class ="card" id="6b"></img>
+        <img src="" alt="card7" class ="card" id="7a"></img>
+        <img src="" alt="card7" class ="card" id="7b"></img>
+        <img src="" alt="card8" class ="card" id="8a"></img>
+        <img src="" alt="card8" class ="card" id="8b"></img>
   </section>
 </body>
 </html>
