no click after match added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Memory Game</title>
 </head>
 <body>
+    <main>
     <h1>Mememory Game </h1>
     <section class="menu">
     <button id="pause">Pause</button>
@@ -16,25 +17,43 @@
     <P id="moves"></P>
     <p>Time</p>
     <p id="timer"></p>
-    <button id="retart"onclick="restartGame()">Restart</button>
+    <button id="restart"onclick="restartGame()">Restart</button>
     </section>
     <section class="cards">
-        <img src="" alt="card1" class ="card" id="1a"></img>
-        <img src="" alt="card1" class ="card" id="1b"></img>
-        <img src="" alt="card2" class ="card" id="2a"></img>
-        <img src="" alt="card2" class ="card" id="2b"></img>
-        <img src="" alt="card3" class ="card" id="3a"></img>
-        <img src="" alt="card3" class ="card" id="3b"></img>
-        <img src="" alt="card4" class ="card" id="4a"></img>
-        <img src="" alt="card4" class ="card" id="4b"></img>
-        <img src="" alt="card5" class ="card" id="5a"></img>
-        <img src="" alt="card5" class ="card" id="5b"></img>
-        <img src="" alt="card6" class ="card" id="6a"></img>
-        <img src="" alt="card6" class ="card" id="6b"></img>
-        <img src="" alt="card7" class ="card" id="7a"></img>
-        <img src="" alt="card7" class ="card" id="7b"></img>
-        <img src="" alt="card8" class ="card" id="8a"></img>
-        <img src="" alt="card8" class ="card" id="8b"></img>
+        <img alt="card1" class ="card" id="1a"></img>
+        <img alt="card1" class ="card" id="1b"></img>
+        <img alt="card2" class ="card" id="2a"></img>
+        <img alt="card2" class ="card" id="2b"></img>
+        <img alt="card3" class ="card" id="3a"></img>
+        <img alt="card3" class ="card" id="3b"></img>
+        <img alt="card4" class ="card" id="4a"></img>
+        <img alt="card4" class ="card" id="4b"></img>
+        <img alt="card5" class ="card" id="5a"></img>
+        <img alt="card5" class ="card" id="5b"></img>
+        <img alt="card6" class ="card" id="6a"></img>
+        <img alt="card6" class ="card" id="6b"></img>
+        <img alt="card7" class ="card" id="7a"></img>
+        <img alt="card7" class ="card" id="7b"></img>
+        <img alt="card8" class ="card" id="8a"></img>
+        <img alt="card8" class ="card" id="8b"></img>
   </section>
+  </main>
 </body>
 </html>
+
+<!-- src="./images/tissue.jpg"
+src="./images/tissue.jpg"
+src="./images/banan.jpg"
+src="./images/banan.jpg"
+src="./images/ice.png"
+src="./images/ice.png"
+src="./images/cake.jpg"
+src="./images/cake.jpg"
+src="./images/donut.jpg"
+src="./images/donut.jpg"
+src="./images/lip.png"
+src="./images/lip.png"
+src="./images/pan.png"
+src="./images/pan.png"
+src="./images/apple.jpg"
+src="./images/apple.jpg" -->
