final score added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <P id="moves"></P>
     <p>Time</p>
     <p id="timer"></p>
-    <button id="restart"onclick="restartGame()">Restart</button>
+    <button id="restart">Restart</button>
     </section>
     <section class="cards">
         <img alt="card1" class ="card" id="1a"></img>
@@ -37,6 +37,7 @@
         <img alt="card8" class ="card" id="8a"></img>
         <img alt="card8" class ="card" id="8b"></img>
   </section>
+  <p id="congrats">congrats</p>
   </main>
 </body>
 </html>
