shuffle works and images in

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://kit.fontawesome.com/56c1d02b1f.js" crossorigin="anonymous"></script>
     <link href="/main.css" rel="stylesheet">
     <script src="/main.js" async defer ></script>
@@ -10,51 +11,38 @@
 </head>
 <body>
     <main>
-    <h1>Mememory Game </h1>
-    <section class="menu">
-    <button id="pause">Pause</button>
-    <p>Moves</p>
-    <P id="moves"></P>
-    <p>Time</p>
-    <p id="timer"></p>
-    <button id="restart">Restart</button>
-    </section>
-    <section class="cards">
-        <img alt="card1" class ="card" id="1a"></img>
-        <img alt="card1" class ="card" id="1b"></img>
-        <img alt="card2" class ="card" id="2a"></img>
-        <img alt="card2" class ="card" id="2b"></img>
-        <img alt="card3" class ="card" id="3a"></img>
-        <img alt="card3" class ="card" id="3b"></img>
-        <img alt="card4" class ="card" id="4a"></img>
-        <img alt="card4" class ="card" id="4b"></img>
-        <img alt="card5" class ="card" id="5a"></img>
-        <img alt="card5" class ="card" id="5b"></img>
-        <img alt="card6" class ="card" id="6a"></img>
-        <img alt="card6" class ="card" id="6b"></img>
-        <img alt="card7" class ="card" id="7a"></img>
-        <img alt="card7" class ="card" id="7b"></img>
-        <img alt="card8" class ="card" id="8a"></img>
-        <img alt="card8" class ="card" id="8b"></img>
-  </section>
-  <p id="congrats">congrats</p>
-  </main>
+        <section id="top">
+            <h1 class="title">Memory Game</h1>    
+        </section>
+        <section class="menu">
+            <button id="pause">Pause</button>
+            <p>Moves</p>
+            <P id="moves"></P>
+            <p>Time</p>
+            <p id="timer"></p>
+            <button id="restart">Restart</button>
+        </section>
+        <section class="cards">
+            <img src = "images/shopkin.jpg" alt = "card1" class ="card" id="1a"></img>
+            <img src = "images/shopkin.jpg" alt = "card1" class ="card" id="1b"></img>
+            <img src = "images/shopkin.jpg" alt = "card2" class ="card" id="2a"></img>
+            <img src = "images/shopkin.jpg" alt = "card2" class ="card" id="2b"></img>
+            <img src = "images/shopkin.jpg" alt = "card3" class ="card" id="3a"></img>
+            <img src = "images/shopkin.jpg" alt = "card3" class ="card" id="3b"></img>
+            <img src = "images/shopkin.jpg" alt = "card4" class ="card" id="4a"></img>
+            <img src = "images/shopkin.jpg" alt = "card4" class ="card" id="4b"></img>
+            <img src = "images/shopkin.jpg" alt = "card5" class ="card" id="5a"></img>
+            <img src = "images/shopkin.jpg" alt = "card5" class ="card" id="5b"></img>
+            <img src = "images/shopkin.jpg" alt = "card6" class ="card" id="6a"></img>
+            <img src = "images/shopkin.jpg" alt = "card6" class ="card" id="6b"></img>
+            <img src = "images/shopkin.jpg" alt = "card7" class ="card" id="7a"></img>
+            <img src = "images/shopkin.jpg" alt = "card7" class ="card" id="7b"></img>
+            <img src = "images/shopkin.jpg" alt = "card8" class ="card" id="8a"></img>
+            <img src = "images/shopkin.jpg" alt = "card8" class ="card" id="8b"></img>
+        </section>
+        <p id="congrats"></p>
+        <audio id="myAudio" href="https://freesound.org/people/jobro/sounds/60443/#""></audio>
+    </main>
 </body>
 </html>
 
-<!-- src="./images/tissue.jpg"
-src="./images/tissue.jpg"
-src="./images/banan.jpg"
-src="./images/banan.jpg"
-src="./images/ice.png"
-src="./images/ice.png"
-src="./images/cake.jpg"
-src="./images/cake.jpg"
-src="./images/donut.jpg"
-src="./images/donut.jpg"
-src="./images/lip.png"
-src="./images/lip.png"
-src="./images/pan.png"
-src="./images/pan.png"
-src="./images/apple.jpg"
-src="./images/apple.jpg" -->
