restart resets timer

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
             <img src = "images/shopkin.jpg" alt = "card7" class ="card" id="7b"></img>
             <img src = "images/shopkin.jpg" alt = "card8" class ="card" id="8a"></img>
             <img src = "images/shopkin.jpg" alt = "card8" class ="card" id="8b"></img>
+            <img src = "images/shopkin.jpg" alt = "card9" class ="card" id="9a"></img>
+            <img src = "images/shopkin.jpg" alt = "card9" class ="card" id="9b"></img>
+            <img src = "images/shopkin.jpg" alt = "card10" class ="card" id="10a"></img>
+            <img src = "images/shopkin.jpg" alt = "card10" class ="card" id="10b"></img>
+            <img src = "images/shopkin.jpg" alt = "card11" class ="card" id="11a"></img>
+            <img src = "images/shopkin.jpg" alt = "card11" class ="card" id="11b"></img>
+            <img src = "images/shopkin.jpg" alt = "card12" class ="card" id="12a"></img>
+            <img src = "images/shopkin.jpg" alt = "card12" class ="card" id="12b"></img>
         </section>
         <p id="congrats"></p>
         <audio id="myAudio" href="https://freesound.org/people/jobro/sounds/60443/#""></audio>
