--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://kit.fontawesome.com/56c1d02b1f.js" crossorigin="anonymous"></script>
-    <link href="/main.css" rel="stylesheet">
-    <script src="/main.js" async defer ></script>
+    <link href="./main.css" rel="stylesheet">
+    <script src="./main.js" async defer ></script>
     <title>Memory Game</title>
 </head>
 <body>
@@ -54,3 +54,4 @@
 </body>
 </html>
 
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae neque, eum repudiandae dolorem iste ex aliquam aspernatur in odio possimus, consequuntur iusto rerum ad, voluptatibus nostrum! Aliquid, odio autem.
