--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
             <img src = "images/shopkin.jpg" alt = "card12" class ="card" id="12a"></img>
             <img src = "images/shopkin.jpg" alt = "card12" class ="card" id="12b"></img> -->
         </section>
-        <p id="congrats"></p>
+        
+        <section class="modal">
+            <div class="modal-content">
+              <p>Some text in the Modal..</p>
+            </div>
+        </section>
         <audio id="myAudio" href="https://freesound.org/people/jobro/sounds/60443/#""></audio>
     </main>
 </body>
