modal added, working

--- a/index.html
+++ b/index.html
@@ -43,15 +43,11 @@
             <img src = "images/shopkin.jpg" alt = "card9" class ="card" id="9b"></img>
             <img src = "images/shopkin.jpg" alt = "card10" class ="card" id="10a"></img>
             <img src = "images/shopkin.jpg" alt = "card10" class ="card" id="10b"></img>
-            <!-- <img src = "images/shopkin.jpg" alt = "card11" class ="card" id="11a"></img>
-            <img src = "images/shopkin.jpg" alt = "card11" class ="card" id="11b"></img>
-            <img src = "images/shopkin.jpg" alt = "card12" class ="card" id="12a"></img>
-            <img src = "images/shopkin.jpg" alt = "card12" class ="card" id="12b"></img> -->
         </section>
-        
-        <section class="modal">
+        <section id="modal" class="modal">
             <div class="modal-content">
-              <p>Some text in the Modal..</p>
+            <span class="close">&times;</span>
+            <p id="modal-text"></p>
             </div>
         </section>
         <audio id="myAudio" href="https://freesound.org/people/jobro/sounds/60443/#""></audio>
