styling tidy up

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 class="title">Memory Game</h1>    
         </section>
         <section class="menu">
-            <button id="pause">Pause</button>
+            <!-- <button id="pause">Pause</button> -->
             <p>Moves</p>
             <P id="moves"></P>
             <p>Time</p>
